@startuml

class Editorial {
    - String nombre
    - String pais
    - ArrayList<Libro> librosPublicados
    + Editorial(String nombre, String pais)
    + String getNombre()
    + void setNombre(String nombre)
    + String getPais()
    + void setPais(String pais)
    + ArrayList<Libro> getLibrosPublicados()
    + void setLibrosPublicados(ArrayList<Libro> librosPublicados)
    + void anyadirLibro(Libro libro)
    + void borrarLibro(Libro libro)
}

class Estudiante {
    + static int contadorEstudiantes
    + static final String CORREO_VALIDO
    - String nombre
    - String curso
    - int nia
    - String email
    - ArrayList<Libro> librosPrestados
    + Estudiante(String nombre, String curso, String email)
    + Estudiante(String nombre)
    + static int obtenerTotalEstudiantes()
    + String getNombre()
    + String getCurso()
    + int getNia()
    + String getEmail()
    + void setNombre(String nombre)
    + void setCurso(String curso)
    + void setEmail(String email)
    + ArrayList<Libro> getLibrosPrestados()
    + void setLibrosPrestados(ArrayList<Libro> librosPrestados)
    + void anyadirLibro(Libro libro)
    + void borrarLibro(Libro libro)
    + static boolean validarEmail(String email)
}

class Libro {
    + static int cantidadLibros
    + static int librosDisponibles
    + static final String ID_LIBROS
    - String titulo
    - String autor
    - String id
    - boolean disponible
    - Estudiante estudiantePrestado
    - Editorial editorial
    + Libro(String titulo, String autor, Editorial editorial)
    + String calcularID()
    + Prestamo prestar(Estudiante estudiante)
    + void devolver(Estudiante estudiante)
    + boolean getDisponible()
    + void estaDisponible()
    + void setDisponible(boolean disponible)
    + String getId()
    + String getAutor()
    + void setAutor(String autor)
    + String getTitulo()
    + void setTitulo(String titulo)
    + static int getLibrosDisponibles()
    + static int getTotalLibros()
    + Estudiante getEstudiantePrestado()
    + void setEstudiantePrestado(Estudiante estudiantePrestado)
    + Editorial getEditorial()
    + void setEditorial(Editorial editorial)
}

class Prestamo {
    - Estudiante estudiante
    - Libro libro
    - LocalDate fecha
    + Prestamo(Estudiante estudiante, Libro libro)
    + LocalDate getFecha()
    + Libro getLibro()
    + void setLibro(Libro libro)
    + Estudiante getEstudiante()
    + void setEstudiante(Estudiante estudiante)
}

Editorial "1" -- "*" Libro : Publica
Estudiante "1" -- "*" Libro : Presta
Estudiante "1" -- "*" Prestamo : Realiza
Libro "1" -- "1" Editorial : Pertenece
Prestamo "1" -- "1" Libro : Registra
Prestamo "1" -- "1" Estudiante : Registra

@enduml
